--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,30 @@ commands:
       - run: 
           name: install aws cli
           command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            ./aws/install
-            aws --version
+            
+            if (aws --version)
+            then 
+              export AWSV=$(aws --version | cut -d/ -f2 | cut -d. -f1)
+              if  [ $(($AWSV>1)) ]
+              then
+                echo cli already installed
+              else
+                echo uninstalling old aws version now
+                sudo rm -rf /usr/local/aws
+                sudo rm /usr/local/bin/aws  
+                echo installing new version now
+                curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                unzip awscliv2.zip
+                ./aws/install
+                aws --version
+            fi 
+            else  
+              echo installing new version now
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              unzip awscliv2.zip
+              ./aws/install
+              aws --version
+            fi
           # command: |
           #     echo 'installing with pip'
           #     python -m pip install awscliv2
