--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,8 +84,10 @@ jobs:
         - run: 
             name: set up virtual environment
             command: |
+              mkdir app
+              cd app
               make setup
-              source ~/.capstone/bin/activate
+              source capstone/bin/activate
               make install
               ls
               ./hadolint --version
