--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,8 @@ jobs:
             name: commit new docker image
             command: |
               aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
-              docker tag capstone:v${CIRCLE_WORKFLOW_ID:0:7} "${ECR_URL}/capstone:v${CIRCLE_WORKFLOW_ID:0:7}"
+              docker image ls
+              docker tag "capstone:v${CIRCLE_WORKFLOW_ID:0:7}" "${ECR_URL}/capstone:v${CIRCLE_WORKFLOW_ID:0:7}"
               docker push "${ECR_URL}/capstone:v${CIRCLE_WORKFLOW_ID:0:7}"
 
 
