--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,9 +117,9 @@ jobs:
             command: |
               if curl -s localhost | grep "Hello"
               then
-                return 0
+                exit 0
               else
-                return 1
+                exit 1
               fi
 
 
