update bash env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ commands:
             name: update .bashrc
             command: |
               aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
-              cat <<\EOF >> ~/.bashrc
+              cat \\<<\EOF \\>> ~/.bashrc
 
               #function to add two floating nums
               add() { n="$@"; bc <<< "${n// /+}"; }
