--- a/cluster-setup/deploy-app.yml
+++ b/cluster-setup/deploy-app.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: capstone
-          image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/capstone:latest
+          image: 466390023253.dkr.ecr.us-west-2.amazonaws.com/capstone:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 81
