--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,18 @@ commands:
               aws --version
             fi
 
+  linux-install-kubectl:
+    description: installs kubernetes
+    steps:
+      - run: 
+          name: install kubectl
+          command: |
+            sudo curl -o /usr/local/bin/kubectl  \
+            https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
+
+            sudo chmod +x /usr/local/bin/kubectl
+
+
   rollback-update:
     description: rolls back the push to ecr on a failure 
     steps:
@@ -137,10 +149,11 @@ jobs:
       steps:
         - checkout
         - linux-install-aws
+        - linux-install-kubectl
         - run: 
             name: do rolling deployment
             command: |
-              aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
+              aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 466390023253.dkr.ecr.us-west-2.amazonaws.com $AWS_ECR_ACCOUNT_URL
               kubectl set image deployment/capstone capstone=466390023253.dkr.ecr.us-west-2.amazonaws.com/capstone:latest
 
 
@@ -154,3 +167,5 @@ workflows:
             requires: [build]
         - test : 
             requires: [lint, build]
+        - deploy :
+            requires: [test]
