--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,8 +153,9 @@ jobs:
         - run: 
             name: do rolling deployment
             command: |
-              aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 466390023253.dkr.ecr.us-west-2.amazonaws.com $AWS_ECR_ACCOUNT_URL
-              kubectl set image deployment/capstone capstone=466390023253.dkr.ecr.us-west-2.amazonaws.com/capstone:latest
+              aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
+              kubectl set image deployment/capstone capstone=${AWS_ECR_ACCOUNT_URL}/capstone:latest
+        - rollback-update
 
 
 
