fix deploy strategy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,9 +165,11 @@ jobs:
             command: |
               aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
               aws eks --region us-west-2 update-kubeconfig --name capstone
-              docker pull "${AWS_ECR_ACCOUNT_URL}/capstone:latest"
+              export NEW_VERSION=$(aws ecr describe-images --repository-name capstone \
+              --query 'sort_by(imageDetails,& imagePushedAt)[*].imageTags' --output text | grep latest | cut -d 'l' -f1 | xargs)
+              docker pull "${AWS_ECR_ACCOUNT_URL}/capstone:${NEW_VERSION}"
               kubectl get pods
-              kubectl set image deployment/capstone capstone=${AWS_ECR_ACCOUNT_URL}/capstone:latest
+              kubectl set image deployment/capstone capstone="${AWS_ECR_ACCOUNT_URL}/capstone:${NEW_VERSION}"
         - rollback-update
 
 
