--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
               curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
               sudo mv -v /tmp/eksctl /usr/local/bin
         - run: ./docker-login.sh
-        - run: ./build-cluster.sh 
+        - run: cd cluster-setup && ./build-cluster.sh 
 
     build:
       machine: 
