--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,6 +202,9 @@ workflows:
             requires: [lint]
         - deploy :
             requires: [test]
+            filters:
+            branches:
+              only: main
 
   create_infra:
     jobs:
