include new app

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,10 +192,7 @@ jobs:
 workflows:
   build_and_deploy: 
     jobs: 
-      - build:
-          filters:
-            branches: 
-              only: main
+      - build 
       - lint :
           requires: [build]
       - test : 
